--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "email": "gtsopour@gmail.com",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www"
-  },
+    "start": "node ./bin/www",
+    "debug": "nodemon --inspect ./bin/www"
+},
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
